resources/public/css/site.css
/* ... */
.button:focus {
  border: unset;
}
.button:disabled {
  color: #7986cb;
}
.button:hover {
  background-color: #303f9f;
}
/* loader */
#preloader {
  background: #fff;
  bottom: 0;
  height: 100%;
  left: 0;
  position: fixed;
  right: 0;
  top: 0;
  width: 100%;
  z-index: 999;
}
@keyframes boxSpin {
  0% {
    transform: translate(-10px, 0px);
  }
  25% {
    transform: translate(10px, 10px);
  }
  50% {
    transform: translate(10px, -10px);
  }
  75% {
    transform: translate(-10px, -10px);
  }
  100% {
    transform: translate(-10px, 10px);
  }
}
@keyframes shadowSpin {
  0% {
    box-shadow: 10px -10px #3f51b5, -10px 10px #f0ad4e;
  }
  25% {
    box-shadow: 10px 10px #3f51b5, -10px -10px #f0ad4e;
  }
  50% {
    box-shadow: -10px 10px #3f51b5, 10px -10px #f0ad4e;
  }
  75% {
    box-shadow: -10px -10px #3f51b5, 10px 10px #f0ad4e;
  }
  100% {
    box-shadow: 10px -10px #3f51b5, -10px 10px #f0ad4e;
  }
}
#load {
  z-index: 9999;
  background-color: #d9534f;
  width: 10px;
  height: 10px;
  position: absolute;
  top: 50%;
  margin: -5px auto 0 auto;
  left: 0;
  right: 0;
  border-radius: 0px;
  border: 5px solid #d9534f;
  box-shadow: 10px 0px #39CCCC, 10px 0px #01FF70;
  animation: shadowSpin 1s ease-in-out infinite;
}
ol.breadcrumb {
  background-color: transparent;
  padding: 0px;
  display: flex;
  flex-direction: row;
  flex-wrap: wrap;
}
ol.breadcrumb li {
  height: 36px;
  display: flex;
  align-items: center;
  flex-wrap: nowrap;
  padding: 0 8px;
  text-align: center;
  cursor: pointer;
  color: #f5f5f5;
  user-select: none;
  -ms-user-select: none;
  -webkit-user-select: none;
}
ol.breadcrumb li.active {
  color: #bdbdbd;
  cursor: unset;
}
ol.breadcrumb li:hover {
  background-color: #303f9f;
}
ol.breadcrumb li:before {
  content: '';
  padding: 0;
}
.header {
  width: 100%;
  background-color: #3f51b5;
  height: auto;
  padding-left: 30px;
  padding-right: 30px;
  position: fixed;
  z-index: 1000;
}
@media (max-width: 480px) {
  .header {
    padding-left: 0;
    padding-right: 0;
  }
}
.header .logo-right {
  position: absolute;
  right: 10px;
  font-weight: bold;
  color: #fff;
}
@media (max-width: 480px) {
  .header .logo-right {
    display: none;
  }
}
.header.dir {
  top: 36px;
  border-top: 1px solid #303f9f;
}
@media (min-width: 768px) and (max-width: 991px) {
  .header {
    padding-left: 10px;
    padding-right: 10px;
  }
}
.header div.separator {
  width: 1px;
  height: 18px;
  border-right: 1px solid #9e9e9e;
  margin: 0 10px;
}
.file {
  display: flex;
  flex-direction: column;
  align-items: center;
  width: 100%;
  min-height: 100px;
  cursor: pointer;
}
.file i {
  font-size: 50px;
}
.file .file-color {
  color: #3f51b5;
}
.file .file-color:hover {
  color: #0025f4;
}
.file .dir-color {
  color: #f0ad4e;
}
.file .dir-color:hover {
  color: #ffb03f;
}
.file h5 {
  text-align: center;
  white-space: pre-line;
  width: 100%;
  text-overflow: ellipsis;
  overflow: hidden;
}
.file h5.selected {
  color: #d9534f;
}
.file h5:hover {
  color: #303f9f;
}
.modal {
  background-color: #1d1d1db0;
}
.img-viewer {
  width: 100%;
  height: auto;
}
.iframe-viewer {
  width: 100%;
  border: none;
}
.cursor-pointer {
  cursor: pointer;
}
.full-width {
  width: 100%;
}
.container {
  padding-top: 122px !important;
}

